# OSREC-interp

./: CMakeLists.txt  OSREC-interp.cpp  OpenCV481Win10.props  OpenCVWin10.props  README.md  cvui.h  v481x64Win10.vcxproj  x64Win10.vcxproj
.github/workflows/: c-cpp.yml  cmake-nix.yml  msbuild-nolibraries.yml  msbuild481.yml  osx-build.yml
Python/: spline.py  y.csv  ybyx.csv
appdir/: OCVWarp.desktop  OSREC-interp.desktop  getfourcc.desktop
